[package]
name = "d3"
# When publishing a new version:
# - Update CHANGELOG.md
# - Update README.md
# - Create "d3-X.Y.Z" git tag
version = "0.1.0"
authors = ["Bruce Brown <brown.bruce1207@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/BruceBrown/d3"
homepage = "https://github.com/BruceBrown/d3"
#documentation = "https://docs.rs/d3"
description = "A framework for server development"
keywords = ["non-blocking", "server", "framework"]
categories = ["asynchronous", "concurrency"]
exclude = ["/ci/*", "/bors.toml"]

# Cargo default release + lto = true
[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 16
rpath = false

[[bench]]
name = "forwarder"
harness = false

[dependencies]
crossbeam = "0.8"
smart-default = "0.6"
atomic_refcell = "0.1"
log = "0.4"
simplelog = "0.8"
rand = "0.7"

d3-core = {version = "0.1.1", path = "./d3-core"}
d3-derive = {version = "0.1.1", path = "./d3-derive"}
d3-components =  {version = "0.1.0", path = "./d3-components"}
echo-service = {version = "0.1.0", path = "./echo-service"}
chat-service = {version = "0.1.0", path = "./chat-service"}


[dev-dependencies]
criterion = "0.3"
uuid = { version = "0.8", default-features = false, features = ["v4"] }

d3-dev-instruction-sets = {version = "0.1.0", path = "./d3-dev-instruction-sets"}
d3-test-drivers = {version = "0.1.0", path = "./d3-test-drivers"}

[workspace]
members = [
 "d3-core",
 "d3-derive",
 "d3-dev-instruction-sets",
 "d3-components",
 "chat-service",
 "echo-service",
 "d3-test-server",
 "d3-test-drivers",
 "examples/monitor-service",
 "examples/alice-service",
]