[package]
name = "d3"
# When publishing a new version:
# - Update CHANGELOG.md
# - Update README.md
# - Create "d3-X.Y.Z" git tag
version = "0.1.2"
authors = ["Bruce Brown <brown.bruce1207@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/BruceBrown/d3"
homepage = "https://github.com/BruceBrown/d3"
documentation = "https://docs.rs/d3"
description = "A framework for server development"
keywords = ["non-blocking", "server", "framework"]
categories = ["asynchronous", "concurrency"]
exclude = ["/ci/*", "/bors.toml"]

# Cargo default release + lto = true
[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 16
rpath = false

[[bench]]
name = "forwarder"
harness = false

[dependencies]
crossbeam = "0.8"
smart-default = "0.6"
atomic_refcell = "0.1"
log = "0.4"
simplelog = "0.8"
rand = "0.7"

d3-core = {version = "0.1.2", path = "./d3-core"}
d3-derive = {version = "0.1.2", path = "./d3-derive"}
d3-components =  {version = "0.1.2", path = "./d3-components"}

[patch.crates-io]
# Add patches here

[dev-dependencies]

# used in test and bench
criterion = "0.3"

d3-dev-instruction-sets = {path = "./d3-dev-instruction-sets"}
d3-test-drivers = {path = "./d3-test-drivers"}

# services for the test server
alice-service = {path = "./examples/alice-service"}
chat-service = {path = "./examples/chat-service"}
echo-service = {path = "./examples/echo-service"}
monitor-service = {path = "./examples/monitor-service"}



# used in example
httparse = "1.3.4"
uuid = { version = "0.8", default-features = false, features = ["v4"] }


[[example]]
name = "alice-service"
crate-type = ["staticlib"]
path = "./examples/alice-service/src/lib.rs"


[[example]]
name = "chat-service"
crate-type = ["staticlib"]
path = "./examples/chat-service/src/lib.rs"


[[example]]
name = "echo-service"
crate-type = ["staticlib"]
path = "./examples/echo-service/src/lib.rs"


[[example]]
name = "monitor-service"
crate-type = ["staticlib"]
path = "./examples/monitor-service/src/lib.rs"

[[example]]
name = "test-server"
path = "./examples/test-server/src/main.rs"


[workspace]
members = [
 "d3-core",
 "d3-derive",
 "d3-components",
 "d3-dev-instruction-sets",
 "d3-test-drivers",
 "examples/chat-service",
 "examples/echo-service",
 "examples/monitor-service",
 "examples/alice-service",
 "examples/test-server",
]
