[package]
name = "d3-components"
version = "0.1.0"
authors = ["Bruce Brown <bruce_brown_1207@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7.3"
crossbeam-channel = "0.4.4"
smart-default = "0.6.0"
mio = {version = "0.7.0", features=["os-poll", "tcp"]}
atomic_refcell = "0.1.6"
slab = "0.4.2"
ringbuf = "0.2.2"
log = "0.4.11"
serde = "1.0.116"
serde_derive = "1.0.116"
config = "0.10.1"
uuid = { version = "0.8", default-features = false, features = ["v4"] }

d3-core = {version = "0.1.0", path = "../d3-core"}
d3-derive = {version = "0.1.0", path = "../d3-derive"}