[package]
name = "d3-components"
# When publishing a new version:
# - Update CHANGELOG.md
# - Update README.md
# - Create "d3-X.Y.Z" git tag
version = "0.1.0"
authors = ["Bruce Brown <brown.bruce1207@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/BruceBrown/d3/tree/master/d3-components"
homepage = "https://github.com/BruceBrown/d3"
documentation = "https://docs.rs/d3-components"
description = "A framework for server development -- the component layer"
keywords = ["non-blocking", "server", "framework"]
categories = ["asynchronous", "concurrency"]
exclude = ["/ci/*", "/bors.toml"]


[dependencies]

crossbeam = "0.8"
smart-default = "0.6"
mio = {version = "0.7", features=["os-poll", "tcp"]}
atomic_refcell = "0.1"
slab = "0.4"
ringbuf = "0.2"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
config = "0.10"
uuid = { version = "0.8", default-features = false, features = ["v4"] }

d3-core = {version = "0.1.0", path = "../d3-core"}
d3-derive = {version = "0.1.0", path = "../d3-derive"}

[dev-dependencies]
simplelog = "0.8"