[package]
name = "d3-core"
version = "0.1.0"
authors = ["Bruce Brown <bruce_brown_1207@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7"
crossbeam-channel = "0.4"
smart-default = "0.6"
atomic_refcell = "0.1"
log = "0.4"
uuid = { version = "0.8", default-features = false, features = ["v4"] }
slab = "0.4"
indexmap = "1.6"
fnv = "1.0"

[dev-dependencies]
simplelog = "0.8"

d3-derive = {version = "0.1.0", path = "../d3-derive"}
