[package]
name = "d3-core"
# When publishing a new version:
# - Update CHANGELOG.md
# - Update README.md
# - Create "d3-X.Y.Z" git tag
version = "0.1.3"
authors = ["Bruce Brown <brown.bruce1207@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/BruceBrown/d3/tree/master/d3-core"
homepage = "https://github.com/BruceBrown/d3"
documentation = "https://docs.rs/d3-core"
description = "A framework for server development -- the core layer"
keywords = ["non-blocking", "server", "framework"]
categories = ["asynchronous", "concurrency"]
exclude = ["/ci/*", "/bors.toml"]


[dependencies]

crossbeam = "0.8"
smart-default = "0.6"
atomic_refcell = "0.1"
log = "0.4"
uuid = { version = "0.8", default-features = false, features = ["v4"] }
super-slab = "0.1"
num_cpus = "1.13"
parking_lot = "0.11"

d3-derive = {version = "0.1.3", path = "../d3-derive"}

[dev-dependencies]
simplelog = "0.8"
