[package]
name = "d3-derive"
# When publishing a new version:
# - Update CHANGELOG.md
# - Update README.md
# - Create "d3-X.Y.Z" git tag
version = "0.1.1"
authors = ["Bruce Brown <brown.bruce1207@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/BruceBrown/d3/tree/master/d3-derive"
homepage = "https://github.com/BruceBrown/d3"
documentation = "https://docs.rs/d3-derive"
description = "A framework for server development -- the derive macro"
keywords = ["non-blocking", "server", "framework"]
categories = ["asynchronous", "concurrency"]
exclude = ["/ci/*", "/bors.toml"]


[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"