[package]
name = "d3-dev-instruction-sets"
version = "0.1.0"
authors = ["Bruce Brown <bruce_brown_1207@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smart-default = "0.6"
crossbeam = "0.8"
crossbeam-channel = "0.5"
uuid = { version = "0.8", default-features = false, features = ["v4"] }

d3-core = {version = "0.1.0", path = "../d3-core"}
d3-derive = {version = "0.1.0", path = "../d3-derive"}
