[package]
name = "d3-dev-instruction-sets"
version = "0.1.0"
authors = ["Bruce Brown <brown.bruce1207@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/BruceBrown/d3/tree/master/d3-dev-instruction-sets"
homepage = "https://github.com/BruceBrown/d3"
#documentation = "https://docs.rs/d3-dev-instruction-sets"
description = "A framework for server development -- test instruction sets"
keywords = ["non-blocking", "server", "framework"]
categories = ["asynchronous", "concurrency"]
exclude = ["/ci/*", "/bors.toml"]


[dependencies]

crossbeam = "0.8"
smart-default = "0.6"
uuid = { version = "0.8", default-features = false, features = ["v4"] }

d3 = {version = "0.1.0", path = "../."}

