[package]
name = "d3-test-drivers"
version = "0.1.0"
authors = ["Bruce Brown <bruce_brown_1207@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smart-default = "0.6"
rand = "0.7"
log = "0.4"

d3-core = {version = "0.1.0", path = "../d3-core"}
d3-dev-instruction-sets = {version = "0.1.0", path = "../d3-dev-instruction-sets"}

