[package]
name = "d3-machine"
version = "0.1.0"
authors = ["Bruce Brown <bruce_brown_1207@yahoo.com>"]
edition = "2018"

#
# d3-machine should not have d3 dependencies, otherwise you may
# run into a circularity.
#
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smart-default = "0.6.0"
crossbeam = "0.7.3"
crossbeam-channel = "0.4.4"


