[package]
name = "d3-tls"
version = "0.1.0"
authors = ["Bruce Brown <bruce_brown_1207@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7.3"
smart-default = "0.6.0"
atomic_refcell = "0.1.6"
log = "0.4.11"

d3-machine = {version = "0.1.0", path = "../d3-machine"}
