[package]
name = "alice-service"
version = "0.1.0"
authors = ["Bruce Brown <bruce_brown_1207@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8"
smart-default = "0.5"
uuid = { version = "0.8", default-features = false, features = ["v4"] }
log = "0.4"
httparse = "1.3.4"

d3-core = {version = "0.1.0", path = "../../d3-core"}
d3-components =  {version = "0.1.0", path = "../../d3-components"}
