[package]
name = "d3-life"
# When publishing a new version:
# - Update CHANGELOG.md
# - Update README.md
# - Create "d3-X.Y.Z" git tag
version = "0.1.0"
authors = ["Bruce Brown <brown.bruce1207@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/BruceBrown/d3/tree/master/examples/d3-life"
homepage = "https://github.com/BruceBrown/d3"
#documentation = "https://docs.rs/d3"
description = "A framework for server development -- example game engine"
keywords = ["non-blocking", "server", "framework"]
categories = ["asynchronous", "concurrency"]
exclude = ["/ci/*", "/bors.toml"]


[dependencies]
log = "0.4"
simplelog = "0.8"
crossbeam = "0.8"
parking_lot = "0.11"
rand = "0.7"

d3 = {path = "../../."}


[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["ttf","image","gfx","mixer","static-link","use-vcpkg"]
