[package]
name = "udp-echo-service"
# When publishing a new version:
# - Update CHANGELOG.md
# - Update README.md
# - Create "d3-X.Y.Z" git tag
version = "0.1.0"
authors = ["Bruce Brown <brown.bruce1207@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/BruceBrown/d3/tree/master/examples/udp-echo-service"
homepage = "https://github.com/BruceBrown/d3"
#documentation = "https://docs.rs/d3"
description = "A framework for server development -- example udp echo service"
keywords = ["non-blocking", "server", "framework"]
categories = ["asynchronous", "concurrency"]
exclude = ["/ci/*", "/bors.toml"]


[dependencies]
log = "0.4"

d3 = {path = "../../../d3"}
